Code cleanup (new Integer(..) to Integer.valueOf(..)